added restriction on deleting and editing restaurants

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -26,9 +26,7 @@
         <td><%= restaurant.zip %></td>
         <td><%= restaurant.upvote %></td>
         <td><%= restaurant.downvote %></td>
-        <td><%= link_to 'Show', restaurant %></td>
-        <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
-        <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Vote', restaurant %></td>
       </tr>
     <% end %>
   </tbody>
