--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -32,6 +32,6 @@
     <%= f.text_field :zip, size: 5 %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Create New Restaurant" %>
   </div>
 <% end %>
