--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New restaurant</h1>
+<div id="content">
 
-<%= render 'form' %>
+  <h2>New restaurant</h2>
+  
+  <%= render 'form' %>
 
-<%= link_to 'Back', restaurants_path %>
+  <%= link_to 'Back', restaurants_path %><br><br>
+  
+</div>
