--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,14 @@
   <p class="alert alert-danger"><%= alert %></p>
 <% end %>  
 
-<p class="navbar-text pull-right">
+<p> 
 <% if user_signed_in? %>
   Logged in as <strong><%= current_user.email %></strong>.
-  <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-  <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+  <%= link_to "<button>Edit profile</button>".html_safe, edit_user_registration_path %> 
+  <%= link_to "<button>Logout</button>".html_safe, destroy_user_session_path, method: :delete %>
 <% else %>
-  <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-  <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+  <%= link_to "<button>Sign up</button>".html_safe, new_user_registration_path %> 
+  <%= link_to "<button>Login</button>".html_safe, new_user_session_path %>
 <% end %>
 
 <%= yield %>
