--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -25,7 +25,6 @@
       <th>Zip</th>
       <th>Will Split</th>
       <th>Won't Split</th>
-      <th colspan="3"></th>
     </tr>
    </thead>
   
@@ -33,14 +32,13 @@
    <tbody>
     <% @restaurants.each do |restaurant| %>
       <tr>
-        <td><%= restaurant.name %></td>
+        <td><%= link_to restaurant.name, restaurant %></td>
         <td><%= restaurant.address %></td>
         <td><%= restaurant.city %></td>
         <td><%= restaurant.state %></td>
         <td><%= restaurant.zip %></td>
         <td><%= @votes.where(:restaurant_id => restaurant.id, :vote => true).count %></td>
         <td><%= @votes.where(:restaurant_id => restaurant.id, :vote => false).count %></td>
-        <td><%= link_to 'Vote', restaurant %></td>
       </tr>
     <% end %>
    </tbody>
