added restriction to view other users summary pages

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-
+your email is: <%= current_user.email %>
+logged in user id is: <%= current_user.id %>
+page of the user with id: <%= @user.id %>
 
 <%= link_to 'Back', restaurants_path %>
