formatted comment date on user summery page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,18 +26,15 @@
 <h2>Your Comments:</h2>
 <% @comments.each do |comment| %>
   <hr>
-  <%= comment.created_at %> 
-  <p>
-    You left a comment for <%= link_to @restaurants.where(:id => comment.restaurant_id)[0].name, restaurant_path(:id => comment.restaurant_id) %>
-  </p>
+  On <%= comment.created_at.strftime("%m-%d-%y") %> at <%= comment.created_at.strftime("%H:%M") %> 
+  you left a comment for <%= link_to @restaurants.where(:id => comment.restaurant_id)[0].name, restaurant_path(:id => comment.restaurant_id) %>:
+
   <p>
     <strong><%= comment.message %></strong>
   </p>
   <br>
 <% end %>
 
-your email is: <%= current_user.email %>
-logged in user id is: <%= current_user.id %>
-page of the user with id: <%= @user.id %>
-
-<%= link_to 'Back', restaurants_path %>
+<br>
+<%= link_to 'Back to list of restaurants', restaurants_path %>
+<br>
