--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,8 @@
 <div id="login">
 <% if user_signed_in? %>
   Logged in as <strong><%= current_user.email %></strong> | 
-  <%= link_to "Edit profile", edit_user_registration_path %> |
+   <%= link_to "View summary", user_path(:id => current_user.id) %> | 
+  <%= link_to "Edit profile", edit_user_registration_path %> | 
   <%= link_to "Logout", destroy_user_session_path, method: :delete %>
   
 <% else %>
