--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -48,13 +48,14 @@
 <h2>Your Comments:</h2>
 <% @comments.each do |comment| %>
   <hr>
-  On <%= comment.created_at.strftime("%m-%d-%y") %> at <%= comment.created_at.strftime("%H:%M") %> 
+  On <%= comment.created_at.strftime("%m-%d-%y") %> at <%= comment.created_at.strftime("%I:%M %p") %> 
   you left a comment for <%= link_to @restaurants.where(:id => comment.restaurant_id)[0].name, restaurant_path(:id => comment.restaurant_id) %>:
 
   <p>
     <strong><%= comment.message %></strong>
   </p>
   <br>
+    <%= link_to 'Back to top', user_path(:id => current_user.id) %><br>
 <% end %>
 
 <br>
