Added psgination for Votes and Favorite restaurants tables on user summary page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,6 +27,10 @@
 <% end %>
   <br>
 
+  <%= paginate @favorite_restaurants %> 
+  <%= page_entries_info @favorite_restaurants %> 
+   
+  <br><br> 
 
 <h2>Your Votes:</h2>
 <% if @votes.size > 0 %>
@@ -54,6 +58,12 @@
   <p>You haven't voted for any restaurants yet</p>
 <% end %>
   <br>
+
+  <%= paginate @votes %> 
+  <%= page_entries_info @votes %> 
+   
+  <br><br> 
+
 
 <% if @comments.size > 3 %>
   <br>
