--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,5 +1,7 @@
 <div id="content"> 
 
+  <p><%= link_to 'Back to list of restaurants', restaurants_path %></p><br>
+
   <div id="description">
 	<p>
 	  <strong>Name:</strong>
@@ -64,9 +66,6 @@
 <% end %>
 <br>
 
-<% if @comments.size > 3 %>
-  <%= link_to 'Back to list of restaurants', restaurants_path %><br><br>
-<% end %>
 
 <h2>Comments:</h2>
 <% if @comments.size > 0 %>
